<resources>
    <string name="app_name">Tour Guide</string>
    <string name="navigation_main">首页</string>
    <string name="navigation_location">景点</string>
    <string name="navigation_track">足迹</string>
    <string name="navigation_hotel">酒店</string>
    <string name="navigation_mine">我的</string>

    <string name="label_login_welcome">登录</string>
    <string name="label_phone">手机</string>
    <string name="label_pwd">密码</string>
    <string name="label_go_register">没有账户？去注册</string>
    <string name="label_login">登陆</string>
    <string name="label_permissions">权限授予</string>
    <string name="is_save_change">Do you want to save your changes?</string>
    <string name="save_change">Save</string>
    <string name="not_save_change">Not save</string>
    <string name="cancel_save_change">Cancel</string>
    <string name="screen_successfully">Set as charging screen successfully</string>
</resources>
