<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/selector_tab_main_icon"
        android:title="@string/navigation_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/selector_tab_location_icon"
        android:title="@string/navigation_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_hotel"
        android:icon="@drawable/selector_tab_hotel_icon"
        android:title="@string/navigation_hotel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/selector_tab_main_icon"
        android:title="@string/navigation_track"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/selector_tab_mine_icon"
        android:title="@string/navigation_mine"
        app:showAsAction="ifRoom" />

</menu>