<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/is_save_change"
        android:textColor="#666666"
        android:textSize="14sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_alpha_16"
        />
    <TextView
        android:id="@+id/bottom_dialog_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/save_change"
        android:textColor="#666666"
        android:textSize="14sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_alpha_16"
        />
    <TextView
        android:id="@+id/bottom_dialog_not_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/not_save_change"
        android:textColor="@color/red_400"
        android:textSize="14sp"/>
   <!-- <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_8"
        android:background="@color/black_alpha_16"
        />

    <TextView
        android:id="@+id/bottom_dialog_cacel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/cancel_save_change"
        android:textColor="#666666"
        android:textSize="14sp"/>-->
</LinearLayout>