<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_src_tianjin"
  >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/len_16"
        android:layout_marginRight="@dimen/len_16"
        android:layout_marginTop="400dp"
        android:background="@drawable/bg_account_input"
        android:orientation="vertical"
        android:paddingBottom="@dimen/len_8"
        android:paddingTop="@dimen/len_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                android:layout_width="@dimen/len_20"
                android:layout_height="@dimen/len_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_8"
                android:layout_marginRight="@dimen/len_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_phone_color"
               />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:background="@null"
                android:hint="@string/label_phone"
                android:inputType="phone"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorTxtSelected"
                android:textColorHint="@color/textSecond"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/len_2"
            android:layout_marginEnd="@dimen/len_8"
            android:layout_marginStart="@dimen/len_44"
            android:layout_marginTop="@dimen/len_2"
            android:background="@color/black_alpha_32" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                android:layout_width="@dimen/len_20"
                android:layout_height="@dimen/len_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_8"
                android:layout_marginRight="@dimen/len_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_pwd_color"
                 />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:background="@null"
                android:hint="@string/label_pwd"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecond"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/len_16"
        android:layout_marginTop="@dimen/len_16">

        <TextView
            android:id="@+id/txt_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/len_16"
            android:gravity="center"
            android:text="@string/label_go_register"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/len_12"
            android:layout_height="@dimen/len_12"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_direction_right"
            android:tint="@color/white" />
    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/len_28">

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/len_172"
            android:layout_height="@dimen/len_44"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/sel_btn_bg_accent_44"
            android:text="进入"
            android:gravity="center"
            android:textColor="@color/white"
            app:gTouchColor="@color/white_alpha_48"
            app:gTouchCornerRadius="22dp"
            app:gTouchEffect="ripple" />

        <net.qiujuer.genius.ui.widget.Loading
            android:id="@+id/loading"
            android:layout_width="@dimen/len_36"
            android:layout_height="@dimen/len_36"
            android:layout_gravity="center"
            app:gAutoRun="false"
            app:gBackgroundColor="@color/trans"
            app:gForegroundColor="@color/white"
            app:gForegroundLineSize="1dp" />
    </FrameLayout>
</LinearLayout>